--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,14 @@ Flask-RESTful==0.3.10
 Flask-Security-Too==5.1.2
 flask-sqlalchemy==3.1.1
 flask-wtf==1.2.2
+google-generativeai==0.3.0
 greenlet==3.1.1
 idna==3.10
 importlib-metadata==8.6.1
 itsdangerous==2.2.0
 jinja2==3.1.5
+langchain==0.1.0
+langchain-google-genai==0.0.5
 MarkupSafe==3.0.2
 mongoengine==0.29.1
 passlib==1.7.4
